--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 :root {
   background: #ffc782;
+  box-sizing: border-box;
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 }
